@@ -24,13 +24,12 @@
 #include "FbWinFrameTheme.hh"
 #include "App.hh"
 
+#include "IconbarTheme.hh"
+
 #include <X11/cursorfont.h>
 
 FbWinFrameTheme::FbWinFrameTheme(int screen_num):
     FbTk::Theme(screen_num),
-    m_label_focus(*this, "window.label.focus", "Window.Label.Focus"),
-    m_label_unfocus(*this, "window.label.unfocus", "Window.Label.Unfocus"),
-
     m_title_focus(*this, "window.title.focus", "Window.Title.Focus"),
     m_title_unfocus(*this, "window.title.unfocus", "Window.Title.Unfocus"),
 
@@ -44,9 +43,6 @@ FbWinFrameTheme::FbWinFrameTheme(int screen_num):
     m_grip_focus(*this, "window.grip.focus", "Window.Grip.Focus"),
     m_grip_unfocus(*this, "window.grip.unfocus", "Window.Grip.Unfocus"),
 
-    m_label_focus_color(*this, "window.label.focus.textColor", "Window.Label.Focus.TextColor"),
-    m_label_unfocus_color(*this, "window.label.unfocus.textColor", "Window.Label.Unfocus.TextColor"),
-
     m_button_focus_color(*this, "window.button.focus.picColor", "Window.Button.Focus.PicColor"),
     m_button_unfocus_color(*this, "window.button.unfocus.picColor", "Window.Button.Unfocus.PicColor"),
 
@@ -57,12 +53,11 @@ FbWinFrameTheme::FbWinFrameTheme(int screen_num):
     m_bevel_width(*this, "window.bevelWidth", "Window.BevelWidth"),
     m_handle_width(*this, "window.handleWidth", "Window.handleWidth"),
     m_border(*this, "window", "Window"), // for window.border*
-    m_label_text_focus_gc(RootWindow(FbTk::App::instance()->display(), screen_num)),
-    m_label_text_unfocus_gc(RootWindow(FbTk::App::instance()->display(), screen_num)),
     m_button_pic_focus_gc(RootWindow(FbTk::App::instance()->display(), screen_num)),
     m_button_pic_unfocus_gc(RootWindow(FbTk::App::instance()->display(), screen_num)),
     m_focused_alpha(255),
-    m_unfocused_alpha(255) {
+    m_unfocused_alpha(255),
+    m_iconbar_theme(screen_num, "window.label", "Window.Label") {
 
     *m_title_height = 0;
     // set defaults
@@ -107,9 +102,9 @@ void FbWinFrameTheme::reconfigTheme() {
     else if (*m_handle_width < 0)
         *m_handle_width = 1;
 
-    m_label_text_focus_gc.setForeground(*m_label_focus_color);
-    m_label_text_unfocus_gc.setForeground(*m_label_unfocus_color);
     m_button_pic_focus_gc.setForeground(*m_button_focus_color);
     m_button_pic_unfocus_gc.setForeground(*m_button_unfocus_color);
+
+    m_iconbar_theme.reconfigTheme();
 }
 
