@@ -1996,7 +1996,7 @@ void BScreen::showPosition(int x, int y) {
 
     winFrameTheme().font().drawText(m_pos_window,
                                     screenNumber(),
-                                    winFrameTheme().labelTextFocusGC(),
+                                    winFrameTheme().iconbarTheme().focusedText().textGC(),
                                     label, strlen(label),
                                     winFrameTheme().bevelWidth(),
                                     winFrameTheme().bevelWidth() +
@@ -2048,7 +2048,7 @@ void BScreen::showGeometry(int gx, int gy) {
     //!! TODO: geom window again?! repeated
     winFrameTheme().font().drawText(m_geom_window,
                                     screenNumber(),
-                                    winFrameTheme().labelTextFocusGC(),
+                                    winFrameTheme().iconbarTheme().focusedText().textGC(),
                                     label, strlen(label),
                                     winFrameTheme().bevelWidth(),
                                     winFrameTheme().bevelWidth() +
@@ -2119,7 +2119,7 @@ void BScreen::renderGeomWindow() {
 
     Pixmap tmp = geom_pixmap;
 
-    if (winFrameTheme().labelFocusTexture().type() & FbTk::Texture::PARENTRELATIVE) {
+    if (winFrameTheme().iconbarTheme().focusedTexture().type() & FbTk::Texture::PARENTRELATIVE) {
         if (!winFrameTheme().titleFocusTexture().usePixmap()) {
             geom_pixmap = None;
             m_geom_window.setBackgroundColor(winFrameTheme().titleFocusTexture().color());
@@ -2129,12 +2129,12 @@ void BScreen::renderGeomWindow() {
             m_geom_window.setBackgroundPixmap(geom_pixmap);
         }
     } else {
-        if (!winFrameTheme().labelFocusTexture().usePixmap()) {
+        if (!winFrameTheme().iconbarTheme().focusedTexture().usePixmap()) {
             geom_pixmap = None;
-            m_geom_window.setBackgroundColor(winFrameTheme().labelFocusTexture().color());
+            m_geom_window.setBackgroundColor(winFrameTheme().iconbarTheme().focusedTexture().color());
         } else {
             geom_pixmap = imageControl().renderImage(m_geom_window.width(), m_geom_window.height(),
-                                                     winFrameTheme().labelFocusTexture());
+                                                     winFrameTheme().iconbarTheme().focusedTexture());
             m_geom_window.setBackgroundPixmap(geom_pixmap);
         }
     }
@@ -2157,7 +2157,7 @@ void BScreen::renderPosWindow() {
 
     Pixmap tmp = pos_pixmap;
 
-    if (winFrameTheme().labelFocusTexture().type() & FbTk::Texture::PARENTRELATIVE) {
+    if (winFrameTheme().iconbarTheme().focusedTexture().type() & FbTk::Texture::PARENTRELATIVE) {
         if (!winFrameTheme().titleFocusTexture().usePixmap()) {
             pos_pixmap = None;
             m_pos_window.setBackgroundColor(winFrameTheme().titleFocusTexture().color());
@@ -2167,12 +2167,12 @@ void BScreen::renderPosWindow() {
             m_pos_window.setBackgroundPixmap(pos_pixmap);
         }
     } else {
-        if (!winFrameTheme().labelFocusTexture().usePixmap()) {
+        if (!winFrameTheme().iconbarTheme().focusedTexture().usePixmap()) {
             pos_pixmap = None;
-            m_pos_window.setBackgroundColor(winFrameTheme().labelFocusTexture().color());
+            m_pos_window.setBackgroundColor(winFrameTheme().iconbarTheme().focusedTexture().color());
         } else {
             pos_pixmap = imageControl().renderImage(m_pos_window.width(), m_pos_window.height(),
-                                                     winFrameTheme().labelFocusTexture());
+                                                     winFrameTheme().iconbarTheme().focusedTexture());
             m_pos_window.setBackgroundPixmap(pos_pixmap);
         }
     }
